api now only supports manifest.uuid via {id} param (see #53)
